# llm-shared

./: .changelog.fixes  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  GROUNDHOG.md  LICENSE.md  README.md  build.bat  changelog-header.md  check.bat  pyproject.toml  requirements.dev.in  requirements.dev.txt  senv.bat  senv.doskey  version.txt  whitelist.py
.agent/workflows/: activity-report.md  consolidate-then-review-ask-questions.md  fix-slow-test.md  git-history-report.md  groundhog.md  group-commits-msg.md  implement-missing-step.md  implement-step.md  implementation-check.md  install-sensitive-git-hooks.md  prepare-release-notes.md  prepare-release.md  process-draft.md  review-and-update-project-docs.md  review-ask-questions.md  run-pw.md  sanitize-git-history.md  split-and-define.md  split-large-file.md  update-merge-commit-msg.md  write-design.md  write-plans.md  write-release-notes-summary.md  write-requirement.md
.agents/.codex-plugin/: plugin.json
.claude/: CLAUDE.md  blacklist.md  markdown.instructions.md  preserve_code.md  settings.local.json
.github/: blacklist.md  copilot-instructions.md  markdown.instructions.md  preserve_code.md
.github/agents/: split-large-file.agent.md
.github/prompts/: analyse.prompt.md  check-api.adapters.prompt.md  check-api.application.prompt.md  check-api.domain-others.prompt.md  check-api.domain-splitting.prompt.md  check-api.others.prompt.md  check-api.prompt.md  check-plan-implementation.prompt.md  continue-analyse.prompt.md  discuss.prompt.md  extend-test-coverage.prompt.md  fix-issue.prompt.md  lower-cyclomatic-complexity.prompt.md  rewrite-docstring.prompt.md  write-commit-message.prompt.md  write-doc-commit-message.prompt.md  write-plan.prompt.md  write-release-notes-summary.prompt.md
docs/: design.v0.1.0.pw_handoff.md  design.v0.2.0.duration_outliers.md  design.v0.3.0.duration_outliers_exclusion.md  design.v0.8.0.git-history-report.md  design.v0.9.0.handoff_automation.md  draft.v0.1.0.pw_handoff.md  draft.v0.2.0.duration_outliers.md  draft.v0.3.0.duration_outliers_exclusion.md  draft.v0.8.0.git_history_report.md  draft.v0.9.0.handoff_automation.md  feature-request.v0.10.0.prepare-release.md  feature-request.v0.3.0.duration_outliers_exclusion.md  feature-request.v0.7.0.prepare-release.md  feature-request.v0.8.0.git-history-report.md  feature-request.v0.9.0.handoff_automation.md  llm-shared_presentation.html  llm-shared_presentation.local.js.example  llm-shared_presentation.pptx  plan.v0.1.0.pw_handoff.md  plan.v0.1.0.pw_handoff.validation.md  plan.v0.2.0.duration_outliers.md  plan.v0.2.0.duration_outliers.validation.md  plan.v0.3.0.duration_outliers_exclusion.md  plan.v0.3.0.duration_outliers_exclusion.validation.md  plan.v0.8.0.git-history-report.md  plan.v0.8.0.git-history-report.validation.md  plan.v0.9.0.handoff_automation.md  plan.v0.9.0.handoff_automation.validation.md
instructions/: activity-report.md  consolidate-then-review-ask-questions.md  fix_slow_test.md  git-history-report.md  groundhog.md  group-commits-msg.md  implement-missing-step.md  implement-step.md  implementation-check.md  install-sensitive-git-hooks.md  prepare-release-notes.md  prepare-release.md  process-draft.md  review-and-update-project-docs.md  review-ask-questions.md  run-pw.md  sanitize-git-history.md  split-and-define.md  split-large-file.md  update-merge-commit-msg.md  write-design.md  write-plans.md  write-release-notes-summary.md  write-requirement.md
rules/: command_prefix_char.md  interactive_menu.md  markdown.md  run_commands.md
scripts/: activity_report.sh  prepare_release_notes.sh
scripts/update-merge-commit-msg/: git-extract-merge-docs.sh  git-reword-merge.sh
templates/: activity-elements.template.md  activity-report.french.template.md  group-commits-msg.template.md  implementation-step-analysis.template.md  md_to_pdf.py.template  open-question.template.md  prepare-release-notes.version-txt.template.txt  write-design.template.md  write-plans.template.md  write-plans.validation.template.md  write-requirement.template.md
tests/: __init__.py  test_dummy.py
tests/unit/: __init__.py  test_pyproject_metadata.py
tools/: Prompt tool specs.md  Pytest reset specs.md  __init__.py  _models.py  coverage_gap_functions.py  coverage_gap_functions_cli.py  coverage_gap_functions_mapping.py  coverage_gap_functions_shared.py  enforce_eof.py  git_batch_commit.py  git_batch_commit_git.py  git_batch_commit_models.py  git_batch_commit_parsing.py  git_batch_commit_workflow.py  git_command.py  group_commit_message_prompt.py  init.bat  new_draft.py  new_draft_git.py  new_draft_models.py  new_draft_prompts.py  new_draft_workflow.py  open_questions_md.py  prompt_workflow.py  prompt_workflow.steps.json  prompt_workflow_docs.py  prompt_workflow_git.py  prompt_workflow_handoff.py  prompt_workflow_memory.py  prompt_workflow_menu.py  prompt_workflow_models.py  prompt_workflow_plan.py  prompt_workflow_skill.py  prompt_workflow_steps.py  repair_venv_scaffold.py  uv_run.py  wrap_commit.py  wrap_commit_backticks.py  wrap_commit_reflow.py  wrap_commit_wraplist.py
tools/git_history_dashboard/: README.md  __init__.py  aggregate.py  analysis.py  build.py  cli.py  render.py  template.html
tools/git_history_diagrams/: __init__.py  generate_git_history_diagrams.py  models.py  scenarios.py  svg_renderer.py
tools/groundhog/: __init__.py  baseline.py  cli.py  commands.py  context.py  day.py  durations.py  durations_report.py  durations_summary.py  exclusions.py  floor.py  gate.py  init_files.py  models.py  parser.py  redirect.py  render.py  reporting.py  reporting_nextstep.py  runner.py  snapshot.py  status.py
tools/html_to_pptx/: README.md  __init__.py  build_llm_shared_pptx.py  deck_parts.py  deck_theme.py  export_preview.ps1  make_pdf.ps1  make_pptx.ps1  pptx_helpers.py  (+2 more)
wiki/: README.md  serve_docs.ini
(+279 files in other folders)
